Implemented adapter, strategy, and xslt transformation